--- a/odoo_db_manager/templates/odoo_db_manager/dashboard.html
+++ b/odoo_db_manager/templates/odoo_db_manager/dashboard.html
@@ -49,6 +49,9 @@
             <a href="{% url 'odoo_db_manager:backup_upload' %}" class="btn btn-info">
                 <i class="fas fa-upload"></i> استعادة من ملف
             </a>
+            <a href="{% url 'odoo_db_manager:google_drive_settings' %}" class="btn btn-outline-primary">
+                <i class="fab fa-google-drive"></i> إعدادات Google Drive
+            </a>
         </div>
     </div>
 
