--- a/odoo_db_manager/templates/odoo_db_manager/schedule_list.html
+++ b/odoo_db_manager/templates/odoo_db_manager/schedule_list.html
@@ -37,9 +37,14 @@
                 <div class="card-header pb-0">
                     <div class="d-flex justify-content-between align-items-center">
                         <h6>{% trans "جدولة النسخ الاحتياطية" %}</h6>
-                        <a href="{% url 'odoo_db_manager:schedule_create' %}" class="btn btn-sm btn-primary">
-                            <i class="fas fa-plus"></i> {% trans "إنشاء جدولة جديدة" %}
-                        </a>
+                        <div>
+                            <a href="{% url 'odoo_db_manager:scheduler_status' %}" class="btn btn-sm btn-info me-2">
+                                <i class="fas fa-cogs"></i> حالة المجدول
+                            </a>
+                            <a href="{% url 'odoo_db_manager:schedule_create' %}" class="btn btn-sm btn-primary">
+                                <i class="fas fa-plus"></i> {% trans "إنشاء جدولة جديدة" %}
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="card-body px-0 pt-0 pb-2">
